Elasticsearch 8.10.4搭建部署updating