@@ -1,7 +1,7 @@
 
 ---
 author: Ryan
-title: Elasticsearch8.10.4搭建部署
+title: Elasticsearch 8.10.4搭建部署
 date: 2023-10-23
 lastmod: 2023-10-23
 tags: 
@@ -9,8 +9,9 @@ tags:
 categories:
    - ElasticStack
 expirationReminder:
-  enable: true
+    enable: true
 ---
+
 ## 1.环境准备
 
 ### 1.1 集群规划
@@ -29,19 +30,28 @@ expirationReminder:
 
 
 
-**ES各版本对java版本的需求：**
+**ES各版本和JVM版本的需求：**
 
-    ES 7.x 及之前版本：选择 Java 8
-    
-    ES 8.x，支持 Java 17 和 Java 18，推荐版本：
-        其中对于ES 8.0：Java版本仅支持 Java 17
-        ES 8.1及以上版本：支持Java 17 以及 Java 18，建议使用Java 17,因为对应版本的 Logstash 不支持 Java 18
+根据 **Elasticsearch 和 JVM 支持一览表** :https://www.elastic.co/cn/support/matrix#matrix_jvm 
+
+    ES 7.x 及之前版本：选择 OpenJDK 8
+    ES 8.4.x 至 8.6.x 支持 OpenJDK17 和 OpenJDK18
+    ES 8.10.x 支持 OpenJDK 17 、OpenJDK 20、OpenJDK 21 （建议使用OpenJDK 17,因为对应版本的 Logstash 不支持 Java 20或21）
+
+
+
+**Logstash 各版本和 JVM版本的需求:**
+
+- Logstash 8.10.x 仅支持OpenJDK 11 和 OpenJDK17
+- Logstash 8.4.x 至 8.6.x  支持OpenJDK 11 和 OpenJDK17 、OpenJDK18 
+
+
 
 【注意】
 
 ```bash
-Java 9、Java 10、Java 12 和 Java 13 均为官方公布的短期版本，ES各版本均不推荐使用这几个
-elasticsearch项目的jdk目录下现在已经内置了openjdk18，也可以直接使用
+Java 9、Java 10、Java 12、Java 13、Java 14、Java 15 和 Java 16 均为官方公布的短期版本，ES各版本均不推荐使用这几个
+Elasticsearch项目的jdk目录下现在已经内置了openjdk18，也可以直接使用,8.10.4版本默认使用openjdk21
 ```
 
 
@@ -57,6 +67,14 @@ Future versions of Elasticsearch will require Java 11; your Java version from [/
 
 
 注：如果Linux服务本来没有配置jdk，则会直接使用es目录下默认的jdk，反而不会报错
+
+
+
+
+
+OpenJDK下载地址：https://jdk.java.net/archive/
+
+![image-20231024144224335](https://cdn1.ryanxin.live/image-20231024144224335.png)
 
 
 
@@ -91,10 +109,10 @@ fi
 hostnamectl set-hostname eslg01
 
 #192.168.10.107 
-hostnamectl set-hostname eslg01
+hostnamectl set-hostname eslg02
 
 #192.168.10.107 
-hostnamectl set-hostname eslg01
+hostnamectl set-hostname eslg03
 ```
 
 
@@ -105,6 +123,7 @@ hostnamectl set-hostname eslg01
 ```bash
 # 3台机器都需要执行
 useradd essl && echo "essl:Ceamg.com" | chpasswd
+sudo usermod -s /bin/bash essl
 ```
 
 
@@ -112,7 +131,8 @@ useradd essl && echo "essl:Ceamg.com" | chpasswd
 ### 1.4 各节点将普通用户权限提高
 
 ```bash
-[root@es01 ~]# visudo
+# visudo
+vim /etc/sudoers
 # 增加一行普通用户权限内容
 essl ALL=(ALL) NOPASSWD:ALL
 ```
@@ -199,6 +219,9 @@ root       soft    nproc     unlimited
 vm.max_map_count=262144
 # 重载配置
 [root@es01 ~]# sysctl -p
+net.core.rmem_default = 33554432
+net.core.rmem_max = 33554432
+vm.max_map_count = 262144
 ```
 
 
@@ -215,23 +238,23 @@ vm.max_map_count=262144
 ### 2.1 解压安装
 
 ```sh
-[root@es01 ~]# mkdir -p /opt/module/
-[root@es01 ~]# chown -R wangting.wangting /opt/module/
-[root@es01 ~]# tar -xf elasticsearch-8.3.2-linux-x86_64.tar.gz -C /opt/module/
-[root@es01 ~]# chown -R wangting.wangting /opt/module/elasticsearch-8.3.2
+mkdir /opt/es/ -p
+chown -R essl.essl /opt/es/
+tar -xf /tmp/elasticsearch-8.10.4-linux-x86_64.tar.gz -C /opt/es/
+chown -R essl.essl /opt/es/elasticsearch-8.10.4
 [root@es01 ~]# cd /opt/module/elasticsearch-8.3.2/
-[root@es01 elasticsearch-8.3.2]# ls -l
-total 892
-drwxr-xr-x  2 wangting wangting   4096 Jul  6  2022 bin
-drwxr-xr-x  3 wangting wangting   4096 Feb 10 15:05 config
-drwxr-xr-x  8 wangting wangting   4096 Jul  6  2022 jdk
-drwxr-xr-x  5 wangting wangting   4096 Jul  6  2022 lib
--rw-r--r--  1 wangting wangting   3860 Jul  6  2022 LICENSE.txt
-drwxr-xr-x  2 wangting wangting   4096 Jul  6  2022 logs
-drwxr-xr-x 66 wangting wangting   4096 Jul  6  2022 modules
--rw-r--r--  1 wangting wangting 874704 Jul  6  2022 NOTICE.txt
-drwxr-xr-x  2 wangting wangting   4096 Jul  6  2022 plugins
--rw-r--r--  1 wangting wangting   2710 Jul  6  2022 README.asciidoc
+root@eslg01:/opt/es/elasticsearch-8.10.4# ls -l
+total 2220
+drwxr-xr-x  2 essl essl    4096 Oct 11 22:10 bin
+drwxr-xr-x  3 essl essl    4096 Oct 24 07:53 config
+drwxr-xr-x  8 essl essl    4096 Oct 11 22:10 jdk
+drwxr-xr-x  5 essl essl    4096 Oct 11 22:10 lib
+-rw-r--r--  1 essl essl    3860 Oct 11 22:03 LICENSE.txt
+drwxr-xr-x  2 essl essl    4096 Oct 11 22:05 logs
+drwxr-xr-x 76 essl essl    4096 Oct 11 22:10 modules
+-rw-r--r--  1 essl essl 2231504 Oct 11 22:05 NOTICE.txt
+drwxr-xr-x  2 essl essl    4096 Oct 11 22:05 plugins
+-rw-r--r--  1 essl essl    8157 Oct 11 22:03 README.asciidoc
 ```
 
 
@@ -239,37 +262,26 @@ drwxr-xr-x  2 wangting wangting   4096 Jul  6  2022 plugins
 ### 2.2 配置环境变量
 
 ```sh
-[root@es01 elasticsearch-8.3.2]# vim /etc/profile
-# ES
+ vim /etc/profile
+
 export JAVA_HOME=/opt/module/elasticsearch-8.3.2/jdk
 export ES_HOME=/opt/module/elasticsearch-8.3.2
 export PATH=$PATH:$ES_HOME/bin
+
+vim /etc/profile.d/elasticsearch.sh
+export JAVA_HOME=/softws/jdk-17.0.2
+# ES
+export ES_HOME=/softws/elasticsearch-8.10.4
+export PATH=$JAVA_HOME/bin:$PATH
+export PATH=$ES_HOME/bin:$PATH
 
 # 引用
-[root@es01 elasticsearch-8.3.2]# source /etc/profile
-[root@es01 ~]# /opt/module/elasticsearch-8.3.2/jdk/bin/java -version
-openjdk version "18.0.1.1" 2022-04-22
-OpenJDK Runtime Environment (build 18.0.1.1+2-6)
-OpenJDK 64-Bit Server VM (build 18.0.1.1+2-6, mixed mode, sharing)
+source /etc/profile.d/elasticsearch.sh
 
-# ###节点es02上操作###
-[root@es02 ~]# vim /etc/profile
-# ES
-export JAVA_HOME=/opt/module/elasticsearch-8.3.2/jdk
-export ES_HOME=/opt/module/elasticsearch-8.3.2
-export PATH=$PATH:$ES_HOME/bin
-
-[root@es02 ~]# source /etc/profile
-
-# ###节点es03上操作###
-[root@es03 ~]# vim /etc/profile
-# ES
-export JAVA_HOME=/opt/module/elasticsearch-8.3.2/jdk
-export ES_HOME=/opt/module/elasticsearch-8.3.2
-export PATH=$PATH:$ES_HOME/bin
-
-[root@es03 ~]# source /etc/profile
-
+root@eslg01:/opt/es/elasticsearch-8.10.4# /softws/jdk-17.0.2/bin/java -version
+openjdk version "17.0.2" 2022-01-18
+OpenJDK Runtime Environment (build 17.0.2+8-86)
+OpenJDK 64-Bit Server VM (build 17.0.2+8-86, mixed mode, sharing)
 ```
 
 
@@ -277,23 +289,30 @@ export PATH=$PATH:$ES_HOME/bin
 ### 2.3 创建es相关目录
 
 ```bash
-# 创建数据文件目录
-[root@es01 ~]# mkdir -p /opt/module/elasticsearch-8.3.2/data
-# 创建证书生成目录
-[root@es01 ~]# mkdir -p /opt/module/elasticsearch-8.3.2/config/certs
-# 目录有改动，重新刷一下权限
-[root@es01 module]# chown -R wangting:wangting /opt/module/elasticsearch-8.3.2
 
-# 分发至es02、es03
+
+
+# 创建数据文件目录
+root@eslg01:~# mkdir -p /opt/es/elasticsearch-8.10.4/data
+# 创建证书生成目录
+root@eslg01:~# mkdir -p /opt/es/elasticsearch-8.10.4/config/certs
+
+# 目录有改动，重新刷一下权限
+root@eslg01:~# chown -R essl:essl /opt/es/elasticsearch-8.10.4/
+
+# 分发至eslg02、eslg03
+
 # 新建目录
-[root@es02 ~]# mkdir -p /opt/module
-[root@es03 ~]# mkdir -p /opt/module
+[root@eslg02 ~]# mkdir -p /opt/es
+[root@eslg03 ~]# mkdir -p /opt/es
+
 # 分发到其他节点,并在02 03上查看操作文件权限
-[root@es01 ~]# scp -r /opt/module/elasticsearch-8.3.2 es02:/opt/module/elasticsearch-8.3.2
-[root@es01 ~]# scp -r /opt/module/elasticsearch-8.3.2 es03:/opt/module/elasticsearch-8.3.2
+root@eslg01:~# scp -r /opt/es/elasticsearch-8.10.4/ eslg02:/opt/es/elasticsearch-8.10.4
+root@eslg01:~# scp -r /opt/es/elasticsearch-8.10.4/ eslg03:/opt/es/elasticsearch-8.10.4
+
 # 目录文件权限刷用户所属
-[root@es02 module]# chown -R wangting:wangting /opt/module/elasticsearch-8.3.2
-[root@es03 module]# chown -R wangting:wangting /opt/module/elasticsearch-8.3.2
+root@eslg02:~# chown -R essl:essl /opt/es/elasticsearch-8.10.4/
+root@eslg03:~# chown -R essl:essl /opt/es/elasticsearch-8.10.4/
 ```
 
 
@@ -303,12 +322,14 @@ export PATH=$PATH:$ES_HOME/bin
 ```bash
 # 在第一台服务器节点es01 设置集群多节点通信密钥
 # 切换普通用户实施
-[root@es01 module]# su - wangting
-[wangting@es01 ~]$ cd /opt/module/elasticsearch-8.3.2/bin
-[wangting@es01 bin]$ ./elasticsearch-certutil ca
-warning: ignoring JAVA_HOME=/opt/module/elasticsearch-8.3.2/jdk; using bundled JDK
+[root@es01 module]# su - essl
+essl@eslg02:~$ cd /opt/es/elasticsearch-8.10.4/bin/
+
+essl@eslg02:/opt/es/elasticsearch-8.10.4/bin$ ./elasticsearch-certutil ca
+warning: ignoring JAVA_HOME=/softws/jdk-17.0.2; using bundled JDK
 This tool assists you in the generation of X.509 certificates and certificate
 signing requests for use with SSL/TLS in the Elastic stack.
+
 The 'ca' mode generates a new 'certificate authority'
 This will create a new X.509 certificate and private key that can be used
 to sign certificate when running in 'cert' mode.
@@ -318,7 +339,7 @@ of the certificate authority
 
 By default the 'ca' mode produces a single PKCS#12 output file which holds:
     * The CA certificate
-    * The CAs private key
+    * The CA's private key
 
 If you elect to generate PEM format certificates (the -pem option), then the output will
 be a zip file containing individual files for the CA certificate and private key
@@ -326,8 +347,19 @@ be a zip file containing individual files for the CA certificate and private key
 Please enter the desired output file [elastic-stack-ca.p12]: # 回车即可
 Enter password for elastic-stack-ca.p12 :  # 回车即可
 
+
+
+
 # 用 ca 证书签发节点证书，过程中需按三次回车键,生成目录：es的home:/opt/elasticsearch-8.3.2/
-[wangting@es01 bin]$ ./elasticsearch-certutil cert --ca elastic-stack-ca.p12
+essl@eslg02:/opt/es/elasticsearch-8.10.4/bin$ ./elasticsearch-certutil cert --ca elastic-stack-ca.p12
+warning: ignoring JAVA_HOME=/softws/jdk-17.0.2; using bundled JDK
+This tool assists you in the generation of X.509 certificates and certificate
+signing requests for use with SSL/TLS in the Elastic stack.
+
+By default the 'cert' mode produces a single PKCS#12 output file which holds:
+    * The instance certificate
+    * The private key for the instance certificate
+    * The CA certificate
 
 If you specify any of the following options:
     * -pem (PEM formatted output)
@@ -339,9 +371,9 @@ Enter password for CA (elastic-stack-ca.p12) :  # 回车即可
 Please enter the desired output file [elastic-certificates.p12]:  # 回车即可
 Enter password for elastic-certificates.p12 :  # 回车即可
 
-Certificates written to /opt/module/elasticsearch-8.3.2/elastic-certificates.p12
+Certificates written to /opt/es/elasticsearch-8.10.4/elastic-certificates.p12
 
-This file should be properly secured as it contains the private key for 
+This file should be properly secured as it contains the private key for
 your instance.
 This file is a self contained file and can be copied and used 'as is'
 For each Elastic product that you wish to configure, you should copy
@@ -351,14 +383,15 @@ and then follow the SSL configuration instructions in the product guide.
 For client applications, you may only need to copy the CA certificate and
 configure the client to trust this certificate.
 
+
 # 将生成的证书文件移动到 config/certs 目录中
-[wangting@es01 bin]$ cd /opt/module/elasticsearch-8.3.2/
-[wangting@es01 elasticsearch-8.3.2]$ ls -l | grep "elastic-"
--rw-------  1 wangting wangting   3596 Feb 10 16:05 elastic-certificates.p12
--rw-------  1 wangting wangting   2672 Feb 10 16:03 elastic-stack-ca.p12
-[wangting@es01 elasticsearch-8.3.2]$ 
-[wangting@es01 elasticsearch-8.3.2]$ mv elastic-certificates.p12 config/certs/
-[wangting@es01 elasticsearch-8.3.2]$ mv elastic-stack-ca.p12 config/certs/
+essl@eslg02:/opt/es/elasticsearch-8.10.4$ ls -l | grep "elastic-"
+-rw-------  1 essl essl    3596 Oct 24 08:40 elastic-certificates.p12
+-rw-------  1 essl essl    2672 Oct 24 08:39 elastic-stack-ca.p12
+
+
+essl@eslg02:/opt/es/elasticsearch-8.10.4$ mv elastic-certificates.p12 config/certs/
+essl@eslg02:/opt/es/elasticsearch-8.10.4$ mv elastic-stack-ca.p12 config/certs/
 ```
 
 
@@ -414,7 +447,7 @@ use for signing your new http certificate. This can be in PKCS#12 (.p12), JKS
 ######################################################
 # 指定CA证书的路径地址，CA Path:后写绝对路径               #
 ######################################################
-CA Path: /opt/module/elasticsearch-8.3.2/config/certs/elastic-stack-ca.p12
+CA Path: /opt/es/elasticsearch-8.10.4/config/certs/elastic-stack-ca.p12
 Reading a PKCS12 keystore requires a password.
 It is possible for the keystore's password to be blank,
 in which case you can simply press <ENTER> at the prompt
@@ -480,15 +513,15 @@ Enter all the hostnames that you need, one per line.
 ######################################################
 When you are done, press <ENTER> once more to move on to the next step.
 
-es01
-es02
-es03
+eslg01
+eslg02
+eslg03
 
 You entered the following hostnames.
 
- - es01
- - es02
- - es03
+ - eslg01
+ - eslg02
+ - eslg03
 
 ####################################################
 # 确认以上是否为正确的配置，输入 Y 表示信息正确            #
@@ -509,15 +542,15 @@ Enter all the IP addresses that you need, one per line.
 ####################################################
 When you are done, press <ENTER> once more to move on to the next step.
 
-172.28.54.213
-172.28.54.214
-172.28.54.215
+192.168.10.107
+192.168.10.108
+192.168.10.109
 
 You entered the following IP addresses.
 
- - 172.28.54.213
- - 172.28.54.214
- - 172.28.54.215
+ - 192.168.10.107
+ - 192.168.10.108
+ - 192.168.10.109
 
 ####################################################
 # 确认以上是否为正确的配置，输入 Y 表示信息正确            #
@@ -530,8 +563,8 @@ values. These values have been selected based on a combination of the
 information you have provided above and secure defaults. You should not need to
 change these values unless you have specific requirements.
 
-Key Name: es01
-Subject DN: CN=es01
+Key Name: eslg01
+Subject DN: CN=eslg01
 Key Size: 2048
 
 ####################################################
@@ -555,8 +588,8 @@ Provide a password for the "http.p12" file:  [<ENTER> for none]
 A number of files will be generated including your private key(s),
 public certificate(s), and sample configuration options for Elastic Stack products.
 These files will be included in a single zip archive.
-What filename should be used for the output zip file? [/opt/module/elasticsearch-8.3.2/elasticsearch-ssl-http.zip] 
-Zip file written to /opt/module/elasticsearch-8.3.2/elasticsearch-ssl-http.zip
+What filename should be used for the output zip file? [/opt/es/elasticsearch-8.10.4/elasticsearch-ssl-http.zip]
+Zip file written to /opt/es/elasticsearch-8.10.4/elasticsearch-ssl-http.zip
 ```
 
 
@@ -565,22 +598,34 @@ Zip file written to /opt/module/elasticsearch-8.3.2/elasticsearch-ssl-http.zip
 
 ```bash
 # 解压
-[wangting@es01 bin]$ cd /opt/module/elasticsearch-8.3.2/
-[wangting@es01 elasticsearch-8.3.2]$ unzip elasticsearch-ssl-http.zip 
+essl@eslg02:/ cd /opt/es/elasticsearch-8.10.4/
+essl@eslg02:/opt/es/elasticsearch-8.10.4$ unzip elasticsearch-ssl-http.zip
+Archive:  elasticsearch-ssl-http.zip
+   creating: elasticsearch/
+  inflating: elasticsearch/README.txt
+  inflating: elasticsearch/http.p12
+  inflating: elasticsearch/sample-elasticsearch.yml
+   creating: kibana/
+  inflating: kibana/README.txt
+  inflating: kibana/elasticsearch-ca.pem
+  inflating: kibana/sample-kibana.yml
+
+
 # 移动证书
-[wangting@es01 elasticsearch-8.3.2]$ mv ./elasticsearch/http.p12 config/certs/
-[wangting@es01 elasticsearch-8.3.2]$ mv ./kibana/elasticsearch-ca.pem config/certs/
+essl@eslg02:/opt/es/elasticsearch-8.10.4$ mv ./elasticsearch/http.p12 config/certs/
+essl@eslg02:/opt/es/elasticsearch-8.10.4$ mv ./kibana/elasticsearch-ca.pem config/certs/
 
 # 将证书分发到其他节点02 03
-[wangting@es01 elasticsearch-8.3.2]$ cd /opt/module/elasticsearch-8.3.2/config/certs
-[wangting@es01 certs]$ ll
+essl@eslg02:/opt/es/elasticsearch-8.10.4$ cd config/certs/
+essl@eslg02:/opt/es/elasticsearch-8.10.4/config/certs$ ls -l
 total 16
--rw------- 1 wangting wangting 3596 Feb 10 16:05 elastic-certificates.p12
--rw-rw-r-- 1 wangting wangting 1200 Feb 10 16:13 elasticsearch-ca.pem
--rw------- 1 wangting wangting 2672 Feb 10 16:03 elastic-stack-ca.p12
--rw-rw-r-- 1 wangting wangting 3652 Feb 10 16:13 http.p12
-[wangting@es01 certs]$ scp * es02:/opt/module/elasticsearch-8.3.2/config/certs/
-[wangting@es01 certs]$ scp * es03:/opt/module/elasticsearch-8.3.2/config/certs/
+-rw------- 1 essl essl 3596 Oct 24 08:40 elastic-certificates.p12
+-rw-rw-r-- 1 essl essl 1200 Oct 24 08:53 elasticsearch-ca.pem
+-rw------- 1 essl essl 2672 Oct 24 08:39 elastic-stack-ca.p12
+-rw-rw-r-- 1 essl essl 3652 Oct 24 08:53 http.p12
+
+essl@eslg02:/opt/es/elasticsearch-8.10.4/config/certs$ scp -r * eslg02:/opt/es/elasticsearch-8.10.4/config/certs
+essl@eslg02:/opt/es/elasticsearch-8.10.4/config/certs$ scp -r * eslg03:/opt/es/elasticsearch-8.10.4/config/certs
 ```
 
 
@@ -594,30 +639,31 @@ total 16
 ### 2.7 配置文件修改配置
 
 ```bash
-[wangting@es01 certs]$ cd /opt/module/elasticsearch-8.3.2/config/
-[wangting@es01 config]$ vim elasticsearch.yml 
-cluster.name: bigdata-es
-node.name: es-es01
-path.data: /opt/module/elasticsearch-8.3.2/data
-path.logs: /opt/module/elasticsearch-8.3.2/logs
+essl@eslg02:/opt/es/elasticsearch-8.10.4/config/certs$ cd ..
+essl@eslg02:/opt/es/elasticsearch-8.10.4/config$ egrep -v "^$|^#" elasticsearch.yml
+cluster.name: logs-es
+node.name: es-lg01
+path.data: /opt/es/elasticsearch-8.10.4/data
+path.logs: /opt/es/elasticsearch-8.10.4/logs
 network.host: 0.0.0.0
 http.port: 9200
-discovery.seed_hosts: ["es01"]
-cluster.initial_master_nodes: ["es-es01", "es-es02","es-es03"]
+discovery.seed_hosts: ["eslg01"]
+cluster.initial_master_nodes: ["es-lg01", "es-lg02", "es-lg03"]
 xpack.security.enabled: true
 xpack.security.enrollment.enabled: true
 xpack.security.http.ssl:
  enabled: true
- keystore.path: /opt/module/elasticsearch-8.3.2/config/certs/http.p12
- truststore.path: /opt/module/elasticsearch-8.3.2/config/certs/http.p12
+ keystore.path: /opt/es/elasticsearch-8.10.4/config/certs/http.p12
+ truststore.path: /opt/es/elasticsearch-8.10.4/config/certs/http.p12
 xpack.security.transport.ssl:
  enabled: true
  verification_mode: certificate
- keystore.path: /opt/module/elasticsearch-8.3.2/config/certs/elastic-certificates.p12
- truststore.path: /opt/module/elasticsearch-8.3.2/config/certs/elastic-certificates.p12
+ keystore.path: /opt/es/elasticsearch-8.10.4/config/certs/elastic-certificates.p12
+ truststore.path: /opt/es/elasticsearch-8.10.4/config/certs/elastic-certificates.p12
 http.host: [_local_, _site_]
 ingest.geoip.downloader.enabled: false
 xpack.security.http.ssl.client_authentication: none
+
 ```
 
 
@@ -651,18 +697,18 @@ http.cors.allow-origin: "*"
 ### 2.8 修改其余节点的配置文件
 
 ```bash
-[wangting@es01 elasticsearch-8.3.2]$ scp config/elasticsearch.yml es02:/opt/module/elasticsearch-8.3.2/config/
-[wangting@es01 elasticsearch-8.3.2]$ scp config/elasticsearch.yml es03:/opt/module/elasticsearch-8.3.2/config/
+essl@eslg02:/opt/es/elasticsearch-8.10.4$ scp config/elasticsearch.yml eslg02:/opt/es/elasticsearch-8.10.4/config/
+essl@eslg02:/opt/es/elasticsearch-8.10.4$ scp config/elasticsearch.yml eslg03:/opt/es/elasticsearch-8.10.4/config/
 
-# es02修改 config/elasticsearch.yml
-[wangting@es02 ~]# vim /opt/module/elasticsearch-8.3.2/config/elasticsearch.yml 
+# eslg02修改 config/elasticsearch.yml
+root@eslg02:~# vim /opt/es/elasticsearch-8.10.4/config/elasticsearch.yml
 # 设置节点名称
-node.name: es-es02
+node.name: es-lg02
 
-# es03修改 config/elasticsearch.yml
-[wangting@es03 ~]# vim /opt/module/elasticsearch-8.3.2/config/elasticsearch.yml 
+# eslg03修改 config/elasticsearch.yml
+root@eslg03:~# vim /opt/es/elasticsearch-8.10.4/config/elasticsearch.yml
 # 设置节点名称
-node.name: es-es03
+node.name: es-lg03
 ```
 
 
@@ -674,12 +720,124 @@ node.name: es-es03
 每台节点依次启动（无顺序要求，只要多于2台，就可以启动集群，这就是es的无主模式，自动识别集群，选举master）：
 
 ```bash
-[wangting@es01 elasticsearch-8.3.2]$ /opt/module/elasticsearch-8.3.2/bin/elasticsearch  -d
-[wangting@es02 elasticsearch-8.3.2]$ /opt/module/elasticsearch-8.3.2/bin/elasticsearch  -d
-[wangting@es03 elasticsearch-8.3.2]$ /opt/module/elasticsearch-8.3.2/bin/elasticsearch  -d
+essl@eslg01:/$ /opt/es/elasticsearch-8.10.4/bin/elasticsearch -d
+essl@eslg02:/$ /opt/es/elasticsearch-8.10.4/bin/elasticsearch -d
+essl@eslg03:/$ /opt/es/elasticsearch-8.10.4/bin/elasticsearch -d
 ```
 
+```bash
+warning: ignoring JAVA_HOME=/softws/jdk-17.0.2; using bundled JDK
+Oct 24, 2023 9:22:58 AM sun.util.locale.provider.LocaleProviderAdapter <clinit>
+WARNING: COMPAT locale provider will be removed in a future release
+[2023-10-24T09:22:58,999][INFO ][o.a.l.u.VectorUtilPanamaProvider] [es-lg01] Java vector incubator API enabled; uses preferredBitSize=128
+[2023-10-24T09:22:59,768][INFO ][o.e.n.Node               ] [es-lg01] version[8.10.4], pid[1260815], build[tar/b4a62ac808e886ff032700c391f45f1408b2538c/2023-10-11T22:04:35.506990650Z], OS[Linux/5.4.0-81-generic/amd64], JVM[Oracle Corporation/OpenJDK 64-Bit Server VM/21/21+35-2513]
+[2023-10-24T09:22:59,770][INFO ][o.e.n.Node               ] [es-lg01] JVM home [/opt/es/elasticsearch-8.10.4/jdk], using bundled JDK [true]
+[2023-10-24T09:22:59,770][INFO ][o.e.n.Node               ] [es-lg01] JVM arguments [-Des.networkaddress.cache.ttl=60, -Des.networkaddress.cache.negative.ttl=10, -Djava.security.manager=allow, -XX:+AlwaysPreTouch, -Xss1m, -Djava.awt.headless=true, -Dfile.encoding=UTF-8, -Djna.nosys=true, -XX:-OmitStackTraceInFastThrow, -Dio.netty.noUnsafe=true, -Dio.netty.noKeySetOptimization=true, -Dio.netty.recycler.maxCapacityPerThread=0, -Dlog4j.shutdownHookEnabled=false, -Dlog4j2.disable.jmx=true, -Dlog4j2.formatMsgNoLookups=true, -Djava.locale.providers=SPI,COMPAT, --add-opens=java.base/java.io=org.elasticsearch.preallocate, -XX:+UseG1GC, -Djava.io.tmpdir=/tmp/elasticsearch-7146833578560053763, --add-modules=jdk.incubator.vector, -XX:+HeapDumpOnOutOfMemoryError, -XX:+ExitOnOutOfMemoryError, -XX:HeapDumpPath=data, -XX:ErrorFile=logs/hs_err_pid%p.log, -Xlog:gc*,gc+age=trace,safepoint:file=logs/gc.log:utctime,level,pid,tags:filecount=32,filesize=64m, -Xms3980m, -Xmx3980m, -XX:MaxDirectMemorySize=2086666240, -XX:G1HeapRegionSize=4m, -XX:InitiatingHeapOccupancyPercent=30, -XX:G1ReservePercent=15, -Des.distribution.type=tar, --module-path=/opt/es/elasticsearch-8.10.4/lib, --add-modules=jdk.net, --add-modules=org.elasticsearch.preallocate, -Djdk.module.main=org.elasticsearch.server]
+[2023-10-24T09:23:03,887][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [repository-url]
+[2023-10-24T09:23:03,888][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [rest-root]
+[2023-10-24T09:23:03,888][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-core]
+[2023-10-24T09:23:03,889][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-redact]
+[2023-10-24T09:23:03,889][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [ingest-user-agent]
+[2023-10-24T09:23:03,889][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-async-search]
+[2023-10-24T09:23:03,889][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-monitoring]
+[2023-10-24T09:23:03,890][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [repository-s3]
+[2023-10-24T09:23:03,890][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-analytics]
+[2023-10-24T09:23:03,890][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-ent-search]
+[2023-10-24T09:23:03,891][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-autoscaling]
+[2023-10-24T09:23:03,891][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [lang-painless]
+[2023-10-24T09:23:03,891][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-ml]
+[2023-10-24T09:23:03,891][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [lang-mustache]
+[2023-10-24T09:23:03,892][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [legacy-geo]
+[2023-10-24T09:23:03,892][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-ql]
+[2023-10-24T09:23:03,892][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [rank-rrf]
+[2023-10-24T09:23:03,893][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [analysis-common]
+[2023-10-24T09:23:03,893][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [transport-netty4]
+[2023-10-24T09:23:03,893][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [aggregations]
+[2023-10-24T09:23:03,893][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [ingest-common]
+[2023-10-24T09:23:03,894][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [frozen-indices]
+[2023-10-24T09:23:03,894][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-identity-provider]
+[2023-10-24T09:23:03,894][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-text-structure]
+[2023-10-24T09:23:03,895][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-shutdown]
+[2023-10-24T09:23:03,895][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [snapshot-repo-test-kit]
+[2023-10-24T09:23:03,895][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [ml-package-loader]
+[2023-10-24T09:23:03,896][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [kibana]
+[2023-10-24T09:23:03,896][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [constant-keyword]
+[2023-10-24T09:23:03,896][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-logstash]
+[2023-10-24T09:23:03,897][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-graph]
+[2023-10-24T09:23:03,897][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-ccr]
+[2023-10-24T09:23:03,897][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [parent-join]
+[2023-10-24T09:23:03,898][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-enrich]
+[2023-10-24T09:23:03,898][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [repositories-metering-api]
+[2023-10-24T09:23:03,898][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [transform]
+[2023-10-24T09:23:03,898][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [repository-azure]
+[2023-10-24T09:23:03,898][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [repository-gcs]
+[2023-10-24T09:23:03,899][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [spatial]
+[2023-10-24T09:23:03,899][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [mapper-extras]
+[2023-10-24T09:23:03,899][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [mapper-version]
+[2023-10-24T09:23:03,899][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [apm]
+[2023-10-24T09:23:03,900][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-rollup]
+[2023-10-24T09:23:03,900][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [percolator]
+[2023-10-24T09:23:03,900][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-stack]
+[2023-10-24T09:23:03,900][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [data-streams]
+[2023-10-24T09:23:03,900][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [rank-eval]
+[2023-10-24T09:23:03,901][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [reindex]
+[2023-10-24T09:23:03,901][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-security]
+[2023-10-24T09:23:03,901][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [blob-cache]
+[2023-10-24T09:23:03,901][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [searchable-snapshots]
+[2023-10-24T09:23:03,901][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-slm]
+[2023-10-24T09:23:03,901][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [snapshot-based-recoveries]
+[2023-10-24T09:23:03,902][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-watcher]
+[2023-10-24T09:23:03,902][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [old-lucene-versions]
+[2023-10-24T09:23:03,902][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-ilm]
+[2023-10-24T09:23:03,902][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-voting-only-node]
+[2023-10-24T09:23:03,902][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-deprecation]
+[2023-10-24T09:23:03,903][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-fleet]
+[2023-10-24T09:23:03,903][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-profiling]
+[2023-10-24T09:23:03,903][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-aggregate-metric]
+[2023-10-24T09:23:03,903][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-downsample]
+[2023-10-24T09:23:03,904][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [ingest-geoip]
+[2023-10-24T09:23:03,904][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-write-load-forecaster]
+[2023-10-24T09:23:03,904][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [search-business-rules]
+[2023-10-24T09:23:03,904][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [ingest-attachment]
+[2023-10-24T09:23:03,905][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [wildcard]
+[2023-10-24T09:23:03,905][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-sql]
+[2023-10-24T09:23:03,905][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [unsigned-long]
+[2023-10-24T09:23:03,905][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-async]
+[2023-10-24T09:23:03,905][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [runtime-fields-common]
+[2023-10-24T09:23:03,906][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [vector-tile]
+[2023-10-24T09:23:03,906][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [lang-expression]
+[2023-10-24T09:23:03,906][INFO ][o.e.p.PluginsService     ] [es-lg01] loaded module [x-pack-eql]
+[2023-10-24T09:23:07,827][INFO ][o.e.e.NodeEnvironment    ] [es-lg01] using [1] data paths, mounts [[/ (/dev/vda2)]], net usable_space [943.2gb], net total_space [1006.9gb], types [ext4]
+[2023-10-24T09:23:07,827][INFO ][o.e.e.NodeEnvironment    ] [es-lg01] heap size [3.8gb], compressed ordinary object pointers [true]
+[2023-10-24T09:23:07,835][INFO ][o.e.n.Node               ] [es-lg01] node name [es-lg01], node ID [e3aozGV5QiSySo-ZJRVf7w], cluster name [logs-es], roles [data_hot, ml, data_frozen, ingest, data_cold, data, remote_cluster_client, master, data_warm, data_content, transform]
+[2023-10-24T09:23:12,502][INFO ][o.e.x.m.p.l.CppLogMessageHandler] [es-lg01] [controller/1260874] [Main.cc@123] controller (64 bit): Version 8.10.4 (Build 92832804c6da01) Copyright (c) 2023 Elasticsearch BV
+[2023-10-24T09:23:12,731][INFO ][o.e.x.s.Security         ] [es-lg01] Security is enabled
+[2023-10-24T09:23:13,599][INFO ][o.e.x.s.a.s.FileRolesStore] [es-lg01] parsed [0] roles from file [/opt/es/elasticsearch-8.10.4/config/roles.yml]
 
+[2023-10-24T09:23:14,462][INFO ][o.e.x.p.ProfilingPlugin  ] [es-lg01] Profiling is enabled
+[2023-10-24T09:23:14,484][INFO ][o.e.x.p.ProfilingPlugin  ] [es-lg01] profiling index templates will not be installed or reinstalled
+[2023-10-24T09:23:15,477][INFO ][o.e.t.n.NettyAllocator   ] [es-lg01] creating NettyAllocator with the following configs: [name=elasticsearch_configured, chunk_size=1mb, suggested_max_allocation_size=1mb, factors={es.unsafe.use_netty_default_chunk_and_page_size=false, g1gc_enabled=true, g1gc_region_size=4mb}]
+[2023-10-24T09:23:15,529][INFO ][o.e.i.r.RecoverySettings ] [es-lg01] using rate limit [40mb] with [default=40mb, read=0b, write=0b, max=0b]
+[2023-10-24T09:23:15,592][INFO ][o.e.d.DiscoveryModule    ] [es-lg01] using discovery type [multi-node] and seed hosts providers [settings]
+[2023-10-24T09:23:17,572][INFO ][o.e.n.Node               ] [es-lg01] initialized
+[2023-10-24T09:23:17,573][INFO ][o.e.n.Node               ] [es-lg01] starting ...
+[2023-10-24T09:23:17,601][INFO ][o.e.x.s.c.f.PersistentCache] [es-lg01] persistent cache index loaded
+[2023-10-24T09:23:17,603][INFO ][o.e.x.d.l.DeprecationIndexingComponent] [es-lg01] deprecation component started
+[2023-10-24T09:23:17,775][INFO ][o.e.t.TransportService   ] [es-lg01] publish_address {192.168.10.107:9300}, bound_addresses {[::]:9300}
+[2023-10-24T09:23:17,952][INFO ][o.e.b.BootstrapChecks    ] [es-lg01] bound or publishing to a non-loopback address, enforcing bootstrap checks
+[2023-10-24T09:23:17,958][INFO ][o.e.c.c.ClusterBootstrapService] [es-lg01] this node has not joined a bootstrapped cluster yet; [cluster.initial_master_nodes] is set to [es-lg01, es-lg02, es-lg03]
+[2023-10-24T09:23:19,268][INFO ][o.e.c.c.Coordinator      ] [es-lg01] setting initial configuration to VotingConfiguration{5IFPa2grR_ee-WjMtwoR-g,KFPhT7e3TMi7qQqjYZ-Jkw,e3aozGV5QiSySo-ZJRVf7w}
+[2023-10-24T09:23:19,385][INFO ][o.e.c.c.CoordinationState] [es-lg01] cluster UUID set to [CywmfOGGTHazzuVafX4Ztw]
+[2023-10-24T09:23:19,415][WARN ][o.e.c.c.Coordinator      ] [es-lg01] received cluster state from {es-lg03}{5IFPa2grR_ee-WjMtwoR-g}{DxqhRisLQ6-nOcLCchoGuA}{es-lg03}{192.168.10.109}{192.168.10.109:9300}{cdfhilmrstw}{8.10.4}{7000099-8100499}{ml.max_jvm_size=4173332480, ml.allocated_processors_double=8.0, ml.allocated_processors=8, ml.machine_memory=8347463680, transform.config_version=10.0.0, xpack.installed=true, ml.config_version=10.0.0} with a different cluster uuid NuMqztvZR9SrDHcMbTkpWQ than local cluster uuid CywmfOGGTHazzuVafX4Ztw, rejecting
+[2023-10-24T09:23:19,415][INFO ][o.e.c.s.ClusterApplierService] [es-lg01] master node changed {previous [], current [{es-lg02}{KFPhT7e3TMi7qQqjYZ-Jkw}{gesjLOfGQCqjvFe4DOGVgA}{es-lg02}{192.168.10.108}{192.168.10.108:9300}{cdfhilmrstw}{8.10.4}{7000099-8100499}]}, added {{es-lg02}{KFPhT7e3TMi7qQqjYZ-Jkw}{gesjLOfGQCqjvFe4DOGVgA}{es-lg02}{192.168.10.108}{192.168.10.108:9300}{cdfhilmrstw}{8.10.4}{7000099-8100499}}, term: 2, version: 1, reason: ApplyCommitRequest{term=2, version=1, sourceNode={es-lg02}{KFPhT7e3TMi7qQqjYZ-Jkw}{gesjLOfGQCqjvFe4DOGVgA}{es-lg02}{192.168.10.108}{192.168.10.108:9300}{cdfhilmrstw}{8.10.4}{7000099-8100499}{ml.max_jvm_size=4173332480, ml.allocated_processors_double=8.0, ml.allocated_processors=8, ml.machine_memory=8347463680, xpack.installed=true, transform.config_version=10.0.0, ml.config_version=10.0.0}}
+[2023-10-24T09:23:19,441][INFO ][o.e.c.c.JoinHelper       ] [es-lg01] failed to join {es-lg03}{5IFPa2grR_ee-WjMtwoR-g}{DxqhRisLQ6-nOcLCchoGuA}{es-lg03}{192.168.10.109}{192.168.10.109:9300}{cdfhilmrstw}{8.10.4}{7000099-8100499}{ml.max_jvm_size=4173332480, ml.allocated_processors_double=8.0, ml.allocated_processors=8, ml.machine_memory=8347463680, transform.config_version=10.0.0, xpack.installed=true, ml.config_version=10.0.0} with JoinRequest{sourceNode={es-lg01}{e3aozGV5QiSySo-ZJRVf7w}{pmQqW-IlSRysgJpeBz2zQg}{es-lg01}{192.168.10.107}{192.168.10.107:9300}{cdfhilmrstw}{8.10.4}{7000099-8100499}{ml.max_jvm_size=4173332480, ml.allocated_processors_double=8.0, ml.allocated_processors=8, ml.machine_memory=8347463680, transform.config_version=10.0.0, xpack.installed=true, ml.config_version=10.0.0}, transportVersion=8500061, minimumTerm=0, optionalJoin=Optional[Join{term=1, lastAcceptedTerm=0, lastAcceptedVersion=0, sourceNode={es-lg01}{e3aozGV5QiSySo-ZJRVf7w}{pmQqW-IlSRysgJpeBz2zQg}{es-lg01}{192.168.10.107}{192.168.10.107:9300}{cdfhilmrstw}{8.10.4}{7000099-8100499}{ml.max_jvm_size=4173332480, ml.allocated_processors_double=8.0, ml.allocated_processors=8, ml.machine_memory=8347463680, transform.config_version=10.0.0, xpack.installed=true, ml.config_version=10.0.0}, targetNode={es-lg03}{5IFPa2grR_ee-WjMtwoR-g}{DxqhRisLQ6-nOcLCchoGuA}{es-lg03}{192.168.10.109}{192.168.10.109:9300}{cdfhilmrstw}{8.10.4}{7000099-8100499}{ml.max_jvm_size=4173332480, ml.allocated_processors_double=8.0, ml.allocated_processors=8, ml.machine_memory=8347463680, transform.config_version=10.0.0, xpack.installed=true, ml.config_version=10.0.0}}]}org.elasticsearch.transport.NodeDisconnectedException: [es-lg03][192.168.10.109:9300][internal:cluster/coordination/join] disconnected
+
+See logs for more details.
+
+[2023-10-24T09:23:19,444][INFO ][o.e.h.AbstractHttpServerTransport] [es-lg01] publish_address {192.168.10.107:9200}, bound_addresses {[::1]:9200}, {127.0.0.1:9200}, {192.168.10.107:9200}
+[2023-10-24T09:23:19,445][INFO ][o.e.n.Node               ] [es-lg01] started {es-lg01}{e3aozGV5QiSySo-ZJRVf7w}{pmQqW-IlSRysgJpeBz2zQg}{es-lg01}{192.168.10.107}{192.168.10.107:9300}{cdfhilmrstw}{8.10.4}{7000099-8100499}{ml.max_jvm_size=4173332480, ml.allocated_processors_double=8.0, ml.allocated_processors=8, ml.machine_memory=8347463680, transform.config_version=10.0.0, xpack.installed=true, ml.config_version=10.0.0}
+
+```
 
 
 
@@ -716,17 +874,15 @@ ES服务启动后有2个端口
 
 ```bash
 # 手工指定elastic的新密码 (-i参数)
-[wangting@es01 ~]$ /opt/module/elasticsearch-8.3.2/bin/elasticsearch-reset-password -u elastic -i
-warning: ignoring JAVA_HOME=/opt/module/elasticsearch-8.3.2/jdk; using bundled JDK
-bThis tool will reset the password of the [elastic] user.
+essl@eslg01:/opt/es/elasticsearch-8.10.4/config/certs$ /opt/es/elasticsearch-8.10.4/bin/elasticsearch-reset-password -u elastic -i
+warning: ignoring JAVA_HOME=/softws/jdk-17.0.2; using bundled JDK
+This tool will reset the password of the [elastic] user.
 You will be prompted to enter the password.
-Please confirm that you would like to continue [y/N]y 
-Did not understand answer 'by'
 Please confirm that you would like to continue [y/N]y
 
 
-Enter password for [elastic]: # 输入用户elastic的密码
-Re-enter password for [elastic]: # 输入用户elastic的密码
+Enter password for [elastic]:
+Re-enter password for [elastic]:
 Password for the [elastic] user successfully reset.
 ```
 
@@ -746,7 +902,7 @@ Password for the [elastic] user successfully reset.
 >
 > 账号密码为上面创建的：elastic / elastic的密码
 
-
+![image-20231024173138345](https://cdn1.ryanxin.live/image-20231024173138345.png)
 
 
 
